CVS_SILENT style guide fix

--- a/buildtools/custommakefiles/custommakeconfigwidgetbase.ui
+++ b/buildtools/custommakefiles/custommakeconfigwidgetbase.ui
@@ -113,7 +113,7 @@
                         </sizepolicy>
                     </property>
                     <property name="text">
-                        <string>E&amp;nvironment</string>
+                        <string>E&amp;nvironment:</string>
                     </property>
                     <property name="buddy" stdset="0">
                         <cstring>envs_combo</cstring>
