--- a/languages/cpp/pcsimporter/kdelibsimporter/settingsdialogbase.ui
+++ b/languages/cpp/pcsimporter/kdelibsimporter/settingsdialogbase.ui
@@ -69,7 +69,7 @@
 <connections>
     <connection>
         <sender>kdeListBox</sender>
-        <signal>selectionChanged(QListBoxItem*)</signal>
+        <signal>clicked(QListBoxItem*)</signal>
         <receiver>SettingsDialogBase</receiver>
         <slot>slotSelectionChanged(QListBoxItem*)</slot>
     </connection>
