--- a/languages/cpp/configproblemreporter.ui
+++ b/languages/cpp/configproblemreporter.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.2" stdsetdef="1">
 <class>ConfigureProblemReporter</class>
 <widget class="QWidget">
     <property name="name">
@@ -9,7 +9,7 @@
             <x>0</x>
             <y>0</y>
             <width>588</width>
-            <height>490</height>
+            <height>492</height>
         </rect>
     </property>
     <property name="caption">
@@ -87,7 +87,7 @@
                         <enum>Horizontal</enum>
                     </property>
                     <property name="tickmarks">
-                        <enum>Right</enum>
+                        <enum>NoMarks</enum>
                     </property>
                     <property name="tickInterval">
                         <number>250</number>
@@ -102,79 +102,16 @@
             <property name="title">
                 <string>Special &amp;Headers</string>
             </property>
-            <grid>
+            <vbox>
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <widget class="KListView" row="0" column="0" rowspan="5" colspan="1">
-                    <column>
-                        <property name="text">
-                            <string></string>
-                        </property>
-                        <property name="clickable">
-                            <bool>true</bool>
-                        </property>
-                        <property name="resizable">
-                            <bool>true</bool>
-                        </property>
-                    </column>
+                <widget class="QTextEdit">
                     <property name="name">
-                        <cstring>specialHeaderListView</cstring>
-                    </property>
-                    <property name="resizeMode">
-                        <enum>LastColumn</enum>
+                        <cstring>specialHeader</cstring>
                     </property>
                 </widget>
-                <spacer row="4" column="1">
-                    <property name="name">
-                        <cstring>spacer2</cstring>
-                    </property>
-                    <property name="orientation">
-                        <enum>Vertical</enum>
-                    </property>
-                    <property name="sizeType">
-                        <enum>Expanding</enum>
-                    </property>
-                    <property name="sizeHint">
-                        <size>
-                            <width>20</width>
-                            <height>61</height>
-                        </size>
-                    </property>
-                </spacer>
-                <widget class="QPushButton" row="3" column="1">
-                    <property name="name">
-                        <cstring>pushButton6</cstring>
-                    </property>
-                    <property name="text">
-                        <string>Move &amp;Down</string>
-                    </property>
-                </widget>
-                <widget class="QPushButton" row="2" column="1">
-                    <property name="name">
-                        <cstring>pushButton5</cstring>
-                    </property>
-                    <property name="text">
-                        <string>Move &amp;Up</string>
-                    </property>
-                </widget>
-                <widget class="QPushButton" row="0" column="1">
-                    <property name="name">
-                        <cstring>pushButton3</cstring>
-                    </property>
-                    <property name="text">
-                        <string>&amp;Add</string>
-                    </property>
-                </widget>
-                <widget class="QPushButton" row="1" column="1">
-                    <property name="name">
-                        <cstring>pushButton4</cstring>
-                    </property>
-                    <property name="text">
-                        <string>&amp;Remove</string>
-                    </property>
-                </widget>
-            </grid>
+            </vbox>
         </widget>
     </vbox>
 </widget>
@@ -191,58 +128,29 @@
         <receiver>ConfigureProblemReporter</receiver>
         <slot>bgParserCheckbox_toggled(bool)</slot>
     </connection>
-    <connection>
-        <sender>pushButton3</sender>
-        <signal>clicked()</signal>
-        <receiver>ConfigureProblemReporter</receiver>
-        <slot>addSpecialHeader()</slot>
-    </connection>
-    <connection>
-        <sender>pushButton4</sender>
-        <signal>clicked()</signal>
-        <receiver>ConfigureProblemReporter</receiver>
-        <slot>removeSpecialHeader()</slot>
-    </connection>
-    <connection>
-        <sender>pushButton5</sender>
-        <signal>clicked()</signal>
-        <receiver>ConfigureProblemReporter</receiver>
-        <slot>moveUpSpecialHeader()</slot>
-    </connection>
-    <connection>
-        <sender>pushButton6</sender>
-        <signal>clicked()</signal>
-        <receiver>ConfigureProblemReporter</receiver>
-        <slot>moveDownSpecialHeader()</slot>
-    </connection>
 </connections>
 <tabstops>
     <tabstop>bgParserCheckbox</tabstop>
     <tabstop>delaySlider</tabstop>
-    <tabstop>specialHeaderListView</tabstop>
-    <tabstop>pushButton3</tabstop>
-    <tabstop>pushButton4</tabstop>
-    <tabstop>pushButton5</tabstop>
-    <tabstop>pushButton6</tabstop>
 </tabstops>
 <includes>
     <include location="global" impldecl="in implementation">kdialog.h</include>
     <include location="local" impldecl="in implementation">configproblemreporter.ui.h</include>
 </includes>
+<forwards>
+    <forward>class CppSupportPart;</forward>
+</forwards>
+<variables>
+    <variable>CppSupportPart* m_part;</variable>
+</variables>
 <slots>
     <slot>init()</slot>
     <slot>destroy()</slot>
+    <slot>setPart( CppSupportPart * part )</slot>
     <slot>accept()</slot>
     <slot>bgParserCheckbox_toggled( bool b )</slot>
     <slot access="protected">setDelayLabel( int delay )</slot>
-    <slot>addSpecialHeader()</slot>
-    <slot>removeSpecialHeader()</slot>
-    <slot>moveUpSpecialHeader()</slot>
-    <slot>moveDownSpecialHeader()</slot>
 </slots>
 <layoutdefaults spacing="6" margin="11"/>
 <layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
-<includehints>
-    <includehint>klistview.h</includehint>
-</includehints>
 </UI>
