--- a/parts/fileview/vcscolorsconfigwidgetbase.ui
+++ b/parts/fileview/vcscolorsconfigwidgetbase.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.2" stdsetdef="1">
 <class>VCSColorsConfigWidgetBase</class>
 <widget class="QWidget">
     <property name="name">
@@ -9,7 +9,7 @@
             <x>0</x>
             <y>0</y>
             <width>342</width>
-            <height>290</height>
+            <height>292</height>
         </rect>
     </property>
     <property name="caption">
@@ -24,7 +24,7 @@
                 <cstring>groupBox1</cstring>
             </property>
             <property name="title">
-                <string>Colors to Use for Version Control Feedback</string>
+                <string>Colors to use for version control feedback</string>
             </property>
             <grid>
                 <property name="name">
