--- a/parts/bookmarks/bookmarks_settings_base.ui
+++ b/parts/bookmarks/bookmarks_settings_base.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.2" stdsetdef="1">
 <class>BookmarkSettingsBase</class>
 <widget class="QWidget">
     <property name="name">
@@ -9,22 +9,25 @@
             <x>0</x>
             <y>0</y>
             <width>622</width>
-            <height>488</height>
+            <height>490</height>
         </rect>
     </property>
     <property name="caption">
         <string>BookmarkSettingsBase</string>
     </property>
-    <grid>
+    <vbox>
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <widget class="QGroupBox" row="0" column="0">
+        <widget class="QGroupBox">
             <property name="name">
                 <cstring>groupBox1</cstring>
             </property>
             <property name="title">
                 <string>Code Tooltip</string>
+            </property>
+            <property name="whatsThis" stdset="0">
+                <string>If checked, a tooltip will be shown when the mouse is over the bookmark, containing the text in the area surrounding it. &lt;p&gt; How many surrounding lines to include is decided by the value in the context box.</string>
             </property>
             <vbox>
                 <property name="name">
@@ -44,7 +47,10 @@
                         <bool>true</bool>
                     </property>
                     <property name="toolTip" stdset="0">
-                        <string>Decides if a tooltip should be shown containing text from the bookmarked line</string>
+                        <string></string>
+                    </property>
+                    <property name="whatsThis" stdset="0">
+                        <string></string>
                     </property>
                 </widget>
                 <widget class="QLayoutWidget">
@@ -65,6 +71,9 @@
                             <property name="buddy" stdset="0">
                                 <cstring>spinBox1</cstring>
                             </property>
+                            <property name="whatsThis" stdset="0">
+                                <string></string>
+                            </property>
                         </widget>
                         <widget class="QSpinBox">
                             <property name="name">
@@ -77,7 +86,10 @@
                                 <number>3</number>
                             </property>
                             <property name="toolTip" stdset="0">
-                                <string>How many lines before and after the bookmarked line should be included in the tooltip</string>
+                                <string></string>
+                            </property>
+                            <property name="whatsThis" stdset="0">
+                                <string></string>
                             </property>
                         </widget>
                         <spacer>
@@ -101,12 +113,15 @@
                 </widget>
             </vbox>
         </widget>
-        <widget class="QButtonGroup" row="1" column="0">
+        <widget class="QButtonGroup">
             <property name="name">
                 <cstring>buttonGroup1</cstring>
             </property>
             <property name="title">
                 <string>Show Bookmarked Codeline in Bookmark Panel</string>
+            </property>
+            <property name="whatsThis" stdset="0">
+                <string>This decides if the bookmark panel should show the content of the bookmarked line in addion to the line number.&lt;p&gt;This can be made optional depending on the start of the line, typically used for only showing lines containing a comment.</string>
             </property>
             <vbox>
                 <property name="name">
@@ -123,25 +138,60 @@
                         <string>Alt+N</string>
                     </property>
                     <property name="toolTip" stdset="0">
-                        <string>The bookmark panel contains only line numbers</string>
+                        <string></string>
+                    </property>
+                    <property name="whatsThis" stdset="0">
+                        <string></string>
                     </property>
                 </widget>
-                <widget class="QRadioButton">
+                <widget class="QLayoutWidget">
                     <property name="name">
-                        <cstring>radioButton2</cstring>
+                        <cstring>layout3</cstring>
                     </property>
-                    <property name="text">
-                        <string>Only &amp;if comment</string>
-                    </property>
-                    <property name="accel">
-                        <string>Alt+I</string>
-                    </property>
-                    <property name="checked">
-                        <bool>true</bool>
-                    </property>
-                    <property name="toolTip" stdset="0">
-                        <string>The bookmark panel also contains the bookmarked line if the line is a C++ style comment - line begin with "//"</string>
-                    </property>
+                    <hbox>
+                        <property name="name">
+                            <cstring>unnamed</cstring>
+                        </property>
+                        <widget class="QRadioButton">
+                            <property name="name">
+                                <cstring>radioButton2</cstring>
+                            </property>
+                            <property name="text">
+                                <string>&amp;Only lines beginning with the following string:</string>
+                            </property>
+                            <property name="accel">
+                                <string>Alt+O</string>
+                            </property>
+                            <property name="checked">
+                                <bool>true</bool>
+                            </property>
+                            <property name="toolTip" stdset="0">
+                                <string></string>
+                            </property>
+                        </widget>
+                        <widget class="QLineEdit">
+                            <property name="name">
+                                <cstring>lineEdit1</cstring>
+                            </property>
+                        </widget>
+                        <spacer>
+                            <property name="name">
+                                <cstring>spacer3</cstring>
+                            </property>
+                            <property name="orientation">
+                                <enum>Horizontal</enum>
+                            </property>
+                            <property name="sizeType">
+                                <enum>Expanding</enum>
+                            </property>
+                            <property name="sizeHint">
+                                <size>
+                                    <width>71</width>
+                                    <height>20</height>
+                                </size>
+                            </property>
+                        </spacer>
+                    </hbox>
                 </widget>
                 <widget class="QRadioButton">
                     <property name="name">
@@ -159,7 +209,7 @@
                 </widget>
             </vbox>
         </widget>
-        <spacer row="2" column="0">
+        <spacer>
             <property name="name">
                 <cstring>spacer2</cstring>
             </property>
@@ -176,9 +226,15 @@
                 </size>
             </property>
         </spacer>
-    </grid>
+    </vbox>
 </widget>
 <connections>
+    <connection>
+        <sender>checkBox1</sender>
+        <signal>toggled(bool)</signal>
+        <receiver>spinBox1</receiver>
+        <slot>setEnabled(bool)</slot>
+    </connection>
     <connection>
         <sender>checkBox1</sender>
         <signal>toggled(bool)</signal>
@@ -186,9 +242,9 @@
         <slot>setEnabled(bool)</slot>
     </connection>
     <connection>
-        <sender>checkBox1</sender>
+        <sender>radioButton2</sender>
         <signal>toggled(bool)</signal>
-        <receiver>spinBox1</receiver>
+        <receiver>lineEdit1</receiver>
         <slot>setEnabled(bool)</slot>
     </connection>
 </connections>
